--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -2,7 +2,7 @@
   "name": "@list/config",
   "version": "1.0.0",
   "description": "configuration for list",
-  "main": "index.js",
+  "main": "listconfig.js",
   "author": "Benjamind Herald",
   "license": "MIT",
   "private": true
