--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@list/contracts",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Ethereum contracts for list",
   "main": "index.js",
   "author": "Benjamin Herald",
@@ -30,9 +30,11 @@
     "compile": "hardhat compile",
     "deploylist": "hardhat run --network mumbai  scripts/deploylist.js",
     "deployverifier": "hardhat run --network rinkeby scripts/deployverifier.js",
+    "deploylisthash": "hardhat run --network goerli scripts/deploylisthash.js",
     "upgradelist": "hardhat run --network mumbai scripts/upgradelist.js",
     "accounts": "hardhat accounts",
     "verifyverifier": "hardhat etherscan-verify --network rinkeby --api-key FQ1NYZXPQIICKE7U41VSRB7TPKZJQKI7SH",
+    "verifylisthash": "hardhat verify --network goerli 0x355Bd8a9898751b779Bf621650d70eEa93FD65eC 0x2890bA17EfE978480615e330ecB65333b880928e 0x572aC98bDea8950f348d2C66945d4E5312B35bbe",
     "verifylist": "hardhat verify --network mumbai 0xd58bf69dabcaefe8d1ead6327190ff215f5b0c3f",
     "verify": "hardhat verify --network rinkeby 0x355Bd8a9898751b779Bf621650d70eEa93FD65eC",
     "test": "echo \"Error: no test specified\" && exit 1",
