--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,10 +7,15 @@
   "scripts": {
     "sync": "node sync.js",
     "verify": "node verify.js",
+    "listhash": "node listhash.js",
     "archive": "git archive -o cli.zip HEAD"
   },
   "dependencies": {
     "@list/config": "1.0.0",
+    "@list/contracts": "2.0.0",
+    "@maticnetwork/maticjs": "^3.3.0",
+    "@maticnetwork/maticjs-ethers": "^1.0.2",
+    "@maticnetwork/maticjs-web3": "^1.0.1",
     "circomlibjs": "^0.1.2",
     "eth-revert-reason": "^1.0.3",
     "ethers": "^5.5.1",
